; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_dos.c_ExtractDOS.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_dos.c_ExtractDOS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hBootType = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ExtractDOS(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32, i32* @hBootType, align 4
  %5 = load i32, i32* @hBootType, align 4
  %6 = call i32 @ComboBox_GetCurSel(i32 %5)
  %7 = call i32 @ComboBox_GetItemData(i32 %4, i32 %6)
  switch i32 %7, label %14 [
    i32 128, label %8
    i32 129, label %11
  ]

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i32 @ExtractMSDOS(i8* %9)
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @ExtractFreeDOS(i8* %12)
  store i32 %13, i32* %2, align 4
  br label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %11, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @ComboBox_GetItemData(i32, i32) #1

declare dso_local i32 @ComboBox_GetCurSel(i32) #1

declare dso_local i32 @ExtractMSDOS(i8*) #1

declare dso_local i32 @ExtractFreeDOS(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
